--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 11000
 
 # DB Information
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb:127.0.0.1:3306/myDB
+spring.datasource.url=jdbc://mariadb:127.0.0.1:3306/myDB
 
 # DB's ID
 spring.datasource.username=poly
