--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port = 11000
 
 # DB Information
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc://mariadb:127.0.0.1:3306/myDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/myDB
 
 # DB's ID
 spring.datasource.username=poly
 
 # DB's Password
-spring.datasource.password=1234
+spring.datasource.password=12345
 
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
