--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,10 @@
 server.port = 11000
 
 # DB Information
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/myDB
-
-# DB's ID
-spring.datasource.username=poly
-
-# DB's Password
+spring.datasource.url=jdbc:postgresql://localhost:5432/cchack
+spring.datasource.username=postgres
 spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
