chang jsp to tymeleaf

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <version>1.2.7</version>
         </dependency>
         -->
+
+        <!-- Thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
