--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 # DTO Mapping camel case
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# JSP Location
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+# Thymeleaf settings
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 # ??? ?? ??
 file.upload-dir=C:/uploads
