--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,16 +26,16 @@ file.upload-dir=C:/uploads
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# CSV 경로 (Colab/서버에 맞게 절대경로 권장)
-scoring.res-csv=classpath:ppodatas/행정동별인구.csv
-scoring.flow-csv=classpath:ppodatas/유동인구.csv
 
-# 가중치 (위치난이도 비중)
+scoring.res-csv=classpath:popdatas/population.csv
+scoring.flow-csv=classpath:popdatas/dongpopulation.csv
+
+# 가중치
 scoring.alpha-loc=0.6
 
-# config.local.properties 있으면 불러오기
+# config.local.properties
 spring.config.import=optional:classpath:config.local.properties
 
-# Kakao Local REST API (선택: 역지오코딩 쓰면 입력)
+# Kakao Local REST API
 kakao.rest-key=${REST_KEY}
 kakao.coord2addr-url=https://dapi.kakao.com/v2/local/geo/coord2address.json
