--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,11 @@ spring.config.import=optional:classpath:config.local.properties
 # Kakao Local REST API
 kakao.rest-key=${REST_KEY}
 kakao.coord2addr-url=https://dapi.kakao.com/v2/local/geo/coord2address.json
+
+# ??/?? ?? ?? UTF-8 (CharacterEncodingFilter)
+server.servlet.encoding.enabled=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+
+# ?????/?? ???
+server.tomcat.uri-encoding=UTF-8
