--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- HTML 파서 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
